# RIS_Autonomous_Navigation_of_TurtleBot3

./: README.md
install/: local_setup.sh  setup.sh
install/my_simulations/share/my_simulations/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/turtlebot3/share/turtlebot3/: package.sh
install/turtlebot3_bringup/share/turtlebot3_bringup/: package.sh
install/turtlebot3_cartographer/share/turtlebot3_cartographer/: package.sh
install/turtlebot3_description/share/turtlebot3_description/: package.sh
install/turtlebot3_example/share/turtlebot3_example/: package.sh
install/turtlebot3_fake_node/share/turtlebot3_fake_node/: package.sh
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: package.sh
install/turtlebot3_msgs/share/turtlebot3_msgs/: package.sh
install/turtlebot3_navigation2/share/turtlebot3_navigation2/: package.sh
install/turtlebot3_node/share/turtlebot3_node/: package.sh
install/turtlebot3_simulations/share/turtlebot3_simulations/: package.sh
install/turtlebot3_teleop/share/turtlebot3_teleop/: package.sh
src/my_simulations/: CMakeLists.txt  package.xml
src/my_simulations/include/: tb3_slam.yaml
src/my_simulations/launch/: maze_world.launch.py  my_world.launch.py
src/my_simulations/models/maze/: model.sdf
src/my_simulations/worlds/: maze_world.world
src/my_simulations/worlds/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/turtlebot3_dqn/: dqn_agent.py  env.py  init__.py  package.xml  setup.py  utils.py
src/turtlebot3_dqn/launch/: dqn_training.launch.py
