<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_dqn</name>
  <version>0.0.1</version>
  <description>Deep Q-Learning for TurtleBot3 in a maze (ROS2 Jazzy)</description>
  <maintainer email="thinal@example.com">thinal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>turtlebot3_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>